force-app/main/default/objects/LearningProgramPlan/LearningProgramPlan.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>