force-app/main/default/objects/LearningProgramPlan/fields/Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee__c</fullName>
    <label>Application Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>