force-app/main/default/objects/LearningProgramPlan/fields/Duration_in_years__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_years__c</fullName>
    <label>Duration (in years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>