force-app/main/default/objects/LearningProgramPlan/fields/Fee_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Fee_Frequency__c</fullName>
    <label>Fee Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Semester</fullName>
            </value>
            <value>
                <fullName>Per Year</fullName>
            </value>
            <value>
                <fullName>Total Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>